enhancement: member service
