# aeq-admins-member/aeq-admins-member-web/src/main/java/de/esports/aeq/admins/member/web/controller/MemberProfileController.java
@@ -1,12 +1,11 @@
 package de.esports.aeq.admins.member.web.controller;
 
-import de.esports.aeq.admins.member.api.MemberProfile;
-import de.esports.aeq.admins.member.api.service.MemberProfileService;
+import de.esports.aeq.admins.member.api.UserProfile;
+import de.esports.aeq.admins.member.api.service.UserProfileService;
 import de.esports.aeq.admins.member.web.types.MemberProfileDto;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.*;
 
 import java.util.Collection;
 import java.util.stream.Collectors;
@@ -18,10 +17,10 @@ import static de.esports.aeq.admins.common.ExceptionResponseWrapper.notFound;
 public class MemberProfileController {
 
     private final ModelMapper mapper;
-    private final MemberProfileService profileService;
+    private final UserProfileService profileService;
 
     @Autowired
-    public MemberProfileController(ModelMapper mapper, MemberProfileService profileService) {
+    public MemberProfileController(ModelMapper mapper, UserProfileService profileService) {
         this.mapper = mapper;
         this.profileService = profileService;
     }
@@ -38,20 +37,20 @@ public class MemberProfileController {
     @GetMapping("/{userId}")
     @ResponseBody
     public MemberProfileDto findByUserId(@PathVariable("userId") Long userId) {
-        return profileService.getProfileByUserId(userId)
+        return profileService.getOneByUsername(userId)
                 .map(this::toMemberProfileDto).orElseThrow(() -> notFound(userId));
     }
 
     @PostMapping
     @ResponseStatus(HttpStatus.CREATED)
     public void create(@RequestBody MemberProfileDto request) {
-        MemberProfile profile = mapper.map(request, MemberProfile.class);
+        UserProfile profile = mapper.map(request, UserProfile.class);
         profileService.createProfile(profile);
     }
 
     //-----------------------------------------------------------------------
 
-    private MemberProfileDto toMemberProfileDto(MemberProfile member) {
+    private MemberProfileDto toMemberProfileDto(UserProfile member) {
         return mapper.map(member, MemberProfileDto.class);
     }
 }
